--- a/views/coverLetterTemplate.handlebars
+++ b/views/coverLetterTemplate.handlebars
@@ -30,8 +30,11 @@
         .bodyContent {
             display: block;
             padding: 20px;
+            min-width: 794px;
+            max-width: 794px;
             box-sizing: border-box;
             font-size: 1em;
+            word-break: break-all;
             color: rgb(24, 23, 23);
             line-height: 1.5;
         }
