--- a/views/coverLetterTemplate.handlebars
+++ b/views/coverLetterTemplate.handlebars
@@ -30,8 +30,8 @@
         .bodyContent {
             display: block;
             padding: 20px;
-            min-width: 794px;
-            max-width: 794px;
+            max-width: 600px;
+            background: red;
             box-sizing: border-box;
             font-size: 1em;
             word-break: break-all;
