--- a/views/coverLetterTemplate.handlebars
+++ b/views/coverLetterTemplate.handlebars
@@ -31,7 +31,7 @@
             display: block;
             padding: 20px;
             box-sizing: border-box;
-            font-size: 1em;
+            font-size: 16px;
             color: rgb(24, 23, 23);
             line-height: 1.5;
         }
@@ -45,7 +45,7 @@
             margin: 0;
             padding: 20px;
             box-sizing: border-box;
-            font-size: 4rem;
+            font-size: 25px;
             font-weight: 700;
             font-family: "Prompt", sans-serif;
         }
@@ -80,7 +80,7 @@
             margin: 0;
             padding: 20px;
             box-sizing: border-box;
-            font-size: 4rem;
+            font-size: 25px;
             font-weight: 700;
             font-family: "Libre Baskerville", serif;
         }
@@ -113,7 +113,7 @@
             margin: 0;
             padding: 20px;
             box-sizing: border-box;
-            font-size: 4rem;
+            font-size: 25px;
             font-weight: 700;
             font-family: "Libre Baskerville", serif;
         }
@@ -147,7 +147,7 @@
             margin: 0;
             padding: 20px;
             box-sizing: border-box;
-            font-size: 4rem;
+            font-size: 25px;
             font-weight: 700;
             font-family: "Libre Baskerville", serif;
         }
