--- a/views/coverLetterTemplate.handlebars
+++ b/views/coverLetterTemplate.handlebars
@@ -30,10 +30,11 @@
         .bodyContent {
             display: block;
             padding: 20px;
+            max-width: 550px;
             box-sizing: border-box;
-            font-size: 16px;
+            font-size: 14px;
             color: rgb(24, 23, 23);
-            line-height: 1.5;
+            line-height: 1.2;
         }
 
         .letterD .headerContent {
